--- a/website/content/posts/using-grid/index.mdx
+++ b/website/content/posts/using-grid/index.mdx
@@ -8,21 +8,7 @@ import Dummy from "./Dummy.jsx"
 
 [](@grid,layoutFixed)
 
-```js
-import html2canvas from "html2canvas"
-
-html2canvas(element, { backgroundColor: null }).then(canvas => {
-  document.body.appendChild(canvas)
-})
-
-html2canvas(element, { backgroundColor: null }).then(canvas => {
-  document.body.appendChild(canvas)
-})
-
-html2canvas(element, { backgroundColor: null }).then(canvas => {
-  document.body.appendChild(canvas)
-})
-```
+asaa
 
 [](@grid)
 
@@ -32,21 +18,7 @@ html2canvas(element, { backgroundColor: null }).then(canvas => {
 
 [](@grid)
 
-```js
-import html2canvas from "html2canvas"
-
-html2canvas(element, { backgroundColor: null }).then(canvas => {
-  document.body.appendChild(canvas)
-})
-
-html2canvas(element, { backgroundColor: null }).then(canvas => {
-  document.body.appendChild(canvas)
-})
-
-html2canvas(element, { backgroundColor: null }).then(canvas => {
-  document.body.appendChild(canvas)
-})
-```
+aaa
 
 [](@grid)
 
