--- a/website/content/posts/using-grid/index.mdx
+++ b/website/content/posts/using-grid/index.mdx
@@ -4,11 +4,26 @@ date: "2019-05-09T08:24:12.000Z"
 max_width: 60rem
 ---
 
-import Dummy from "./Dummy.jsx"
+
+import Dummy from './Dummy.jsx';
 
 [](@grid,layoutFixed)
 
-asaa
+```js
+import html2canvas from 'html2canvas';
+
+html2canvas(element, { backgroundColor: null }).then((canvas) => {
+  document.body.appendChild(canvas);
+});
+
+html2canvas(element, { backgroundColor: null }).then((canvas) => {
+  document.body.appendChild(canvas);
+});
+
+html2canvas(element, { backgroundColor: null }).then((canvas) => {
+  document.body.appendChild(canvas);
+});
+```
 
 [](@grid)
 
@@ -18,7 +33,21 @@ asaa
 
 [](@grid)
 
-aaa
+```js
+import html2canvas from 'html2canvas';
+
+html2canvas(element, { backgroundColor: null }).then((canvas) => {
+  document.body.appendChild(canvas);
+});
+
+html2canvas(element, { backgroundColor: null }).then((canvas) => {
+  document.body.appendChild(canvas);
+});
+
+html2canvas(element, { backgroundColor: null }).then((canvas) => {
+  document.body.appendChild(canvas);
+});
+```
 
 [](@grid)
 
