--- a/website/content/posts/hello-world/index.ko.mdx
+++ b/website/content/posts/hello-world/index.ko.mdx
@@ -4,13 +4,15 @@ date: "2015-05-01T22:12:03.284Z"
 max_width: 60rem
 ---
 
-import Counter from "./Counter"
-import { JsonTree } from "gatsby-plugin-bluewings"
-import data from "./data"
+import Counter from './Counter';
+import { JsonTree } from 'gatsby-plugin-bluewings';
+import data from './data';
 
 <Counter />
 
----
+-----
+
+<JsonTree data={data} />
 
 ```jsx{1,4-6}
 class HelloMessage extends React.Component {
@@ -22,14 +24,12 @@ class HelloMessage extends React.Component {
     );
   }
 }
- 
+
 ReactDOM.render(
   <HelloMessage name="Taylor" />,
   document.getElementById('hello-example')
 );
 ```
-
-<JsonTree data={data} />
 
 이것은 나의 새로운 가짜 블로그에 올린 첫 번째 글이야! 정말로 흥미롭죠!
 
@@ -37,14 +37,12 @@ ReactDOM.render(
 
 위키피디아에 [샐러드 오리알](http://en.wikipedia.org/wiki/Salted_duck_egg).에 대한 훌륭한 인용구가 있다.
 
-> 동해물과 백두산이 마르고 닳도록
-> 동해물과 백두산이 마르고 닳도록
+> A salted duck egg is a Chinese preserved food product made by soaking duck
 > eggs in brine, or packing each egg in damp, salted charcoal. In Asian
-> 동해물과 백두산이 마르고 닳도록
-> 동해물과 백두산이 마르고 닳도록
-> 동해물과 백두산이 마르고 닳도록
-> 동해물과 백두산이 마르고 닳도록
-> 동해물과 백두산이 마르고 닳도록
-> 동해물과 백두산이 마르고 닳도록
+> supermarkets, these eggs are sometimes sold covered in a thick layer of salted
+> charcoal paste. The eggs may also be sold with the salted paste removed,
+> wrapped in plastic, and vacuum packed. From the salt curing process, the
+> salted duck eggs have a briny aroma, a gelatin-like egg white and a
+> firm-textured, round yolk that is bright orange-red in color.
 
 ![Chinese Salty Egg](./salty_egg.jpg)
