--- a/website/content/posts/using-context/index.mdx
+++ b/website/content/posts/using-context/index.mdx
@@ -3,7 +3,7 @@ title: Using Context
 date: "2019-05-09T08:24:12.000Z"
 ---
 
-import { Context } from "gatsby-plugin-bluewings"
+import { Context } from 'gatsby-plugin-bluewings';
 
 [](@context)
 
@@ -11,15 +11,14 @@ import { Context } from "gatsby-plugin-bluewings"
 
 <Context>
   {({ value, setValue }) => {
-    const handleClick = () => setValue("count", (value.count || 0) + 1)
-    return (
-      <button type="button" onClick={handleClick}>
-        add count
-      </button>
-    )
+    const handleClick = () => setValue('count', (value.count || 0) + 1);
+    return <button type="button" onClick={handleClick}>add count</button>
   }}
 </Context>
-<Context>{({ value }) => <pre>{JSON.stringify(value)}</pre>}</Context>
+
+<Context>
+  {({ value }) => <pre>{JSON.stringify(value)}</pre>}
+</Context>
 
 [](@context)
 
@@ -27,14 +26,13 @@ import { Context } from "gatsby-plugin-bluewings"
 
 <Context>
   {({ value, setValue }) => {
-    const handleClick = () => setValue("count", (value.count || 0) + 1)
-    return (
-      <button type="button" onClick={handleClick}>
-        add count
-      </button>
-    )
+    const handleClick = () => setValue('count', (value.count || 0) + 1);
+    return <button type="button" onClick={handleClick}>add count</button>
   }}
 </Context>
-<Context>{({ value }) => <pre>{JSON.stringify(value)}</pre>}</Context>
+
+<Context>
+  {({ value }) => <pre>{JSON.stringify(value)}</pre>}
+</Context>
 
 [](@contextend)
